feat: update, add sunshine

--- a/home/workstation/waybar/style.css
+++ b/home/workstation/waybar/style.css
@@ -18,7 +18,7 @@
 @define-color black #10072B;
 
 * {
-	font-family: JetBrainsMono Nerd Font, JetBrainsMono;
+	font-family: JetBrainsMono Nerd Fonts;
 	font-size: 16px;
 	box-shadow: none;
 	text-shadow: none;
