--- a/home/workstation/wofi/style.css
+++ b/home/workstation/wofi/style.css
@@ -2,7 +2,7 @@ window {
 	border: 5px solid #a8460b;
 	border-radius: 5px;
 	background-color: #eddfbf;
-	font-family: "JetBrains Mono";
+	font-family: "JetBrainsMono Nerd Fonts";
 	font-weight: bold;
 	font-size: 14px;
 	color: #10072b;
